# xtexx-_-fabricia

./: Cargo.toml  Justfile
axis/axis/: Cargo.toml
axis/axis/src/: bus.rs  config.rs  main.rs
axis/axis/src/routes/: mod.rs
axis/dispatcher/: Cargo.toml
axis/jobrunner/: Cargo.toml
axis/jobrunner/src/: lib.rs
backend/: Cargo.toml
backend/migrations/postgresql/0001_init/: down.sql
backend/migrations/sqlite/0001_init/: up.sql
backend/model/: Cargo.toml
backend/model/migrations/postgresql/0001_init/: down.sql  up.sql
backend/model/migrations/sqlite/0001_init/: up.sql
backend/model/src/: branch.rs  bus.rs  job.rs  lib.rs  package.rs  target.rs
backend/model/src/db/: mod.rs  schema.rs  types.rs  utils.rs
backend/service/: Cargo.toml
backend/service/src/: branch.rs  bus.rs  config.rs  database.rs  job_queue.rs  lib.rs  redis.rs  target.rs
backend/src/: branch.rs  bus.rs  config.rs  job_queue.rs  lib.rs  redis.rs  target.rs
backend/src/db/: mod.rs  service.rs
common/model/: Cargo.toml
common/model/src/: branch.rs  lib.rs
crayon/api-model/: Cargo.toml
crayon/api-model/src/: branch.rs  lib.rs
crayon/crayon/: Cargo.toml
crayon/crayon/src/: bus.rs  config.rs  main.rs
crayon/crayon/src/routes/: mod.rs
crayon/crayon/src/routes/api/: auth.rs  branch.rs  error.rs  mod.rs
