[package]
name = "fabricia-axis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
diesel.workspace = true
diesel-async.workspace = true
fabricia-axis-jobrunner = { version = "0.1.0", path = "../jobrunner" }
fabricia-backend = { version = "0.1.0", path = "../../backend" }
fabricia-common-model = { version = "0.1.0", path = "../../common/model" }
futures.workspace = true
kstring.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
