[package]
name = "fabricia-backend-service"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
diesel.workspace = true
diesel-async.workspace = true
deadpool.workspace = true
serde.workspace = true
serde_json.workspace = true
fabricia-backend-model = { version = "0.1.0", path = "../model" }
tracing.workspace = true
futures.workspace = true
kstring = { workspace = true, features = ["serde"] }
tokio.workspace = true
uuid.workspace = true
time.workspace = true
redis.workspace = true
rand.workspace = true
rslock = { version = "0.6.0", default-features = false, features = ["tokio-comp"] }
