[package]
name = "fabricia-crayon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
diesel.workspace = true
fabricia-backend-service = { version = "0.1.0", path = "../../backend/service" }
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
