[package]
name = "fabricia-crayon"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
diesel.workspace = true
diesel-async.workspace = true
fabricia-backend = { version = "0.1.0", path = "../../backend" }
fabricia-common-model = { version = "0.1.0", path = "../../common/model" }
fabricia-crayon-api-model = { version = "0.1.0", path = "../api-model" }
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
kstring.workspace = true
hex.workspace = true
futures.workspace = true
redis.workspace = true
serde_json.workspace = true
